@@ -1,5 +1,6 @@
 package org.architech.launcher.gui;
 
+import javafx.application.Platform;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.Parent;
@@ -10,6 +11,9 @@ import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.layout.*;
 import javafx.stage.Stage;
+import org.architech.launcher.MCLauncher;
+import org.architech.launcher.utils.LogManager;
+
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
@@ -53,52 +57,86 @@ public class ModsUI {
         modsList.setPadding(new Insets(8, 16, 16, 16));
 
         Path modsDir = GAME_DIR.resolve("mods");
-        try {
-            Files.createDirectories(modsDir);
+        try { Files.createDirectories(modsDir); } catch (Exception ignored) {}
 
-            HBox header = new HBox(12);
-            header.setAlignment(Pos.CENTER_LEFT);
-            header.setStyle("-fx-font-weight: bold; -fx-padding: 4 0 8 0;");
-            header.getChildren().addAll(
-                    fixedHeaderLabel("Название", COL_NAME),
-                    fixedHeaderLabel("Версия",   COL_VER),
-                    fixedHeaderLabel("Обновлён", COL_DATE),
-                    fixedHeaderLabel("Активен",  COL_TOGGLE)
-            );
-            modsList.getChildren().add(header);
+        // header (готовим один раз)
+        HBox header = new HBox(12);
+        header.setAlignment(Pos.CENTER_LEFT);
+        header.setStyle("-fx-font-weight: bold; -fx-padding: 4 0 8 0;");
+        header.getChildren().addAll(
+                fixedHeaderLabel("Название", COL_NAME),
+                fixedHeaderLabel("Версия",   COL_VER),
+                fixedHeaderLabel("Обновлён", COL_DATE),
+                fixedHeaderLabel("Активен",  COL_TOGGLE)
+        );
 
+        // индикатор загрузки пока собираем данные
+        ProgressIndicator loading = new ProgressIndicator();
+        loading.setPrefSize(48, 48);
+        StackPane loadingHolder = new StackPane(loading);
+        loadingHolder.setPadding(new Insets(24));
+        modsRoot.setCenter(loadingHolder);
+
+        // модель, собираем в фоне
+        record ModMeta(Path path, String fileName, boolean disabled, String displayName, String version, String lastUpdated) {}
+
+        MCLauncher.submitBackground(() -> {
+            List<ModMeta> metas = new ArrayList<>();
             try (DirectoryStream<Path> ds = Files.newDirectoryStream(modsDir, "*.jar*")) {
                 for (Path modPath : ds) {
+                    try {
+                        String fn = modPath.getFileName().toString();
+                        boolean disabled = fn.endsWith(".disabled");
+                        String display = fn.replace(".disabled", "");
+                        String version = parseModVersion(modPath);
+                        String lastUpdated = formatFileTime(Files.getLastModifiedTime(modPath));
+                        metas.add(new ModMeta(modPath, fn, disabled, display, version == null ? "" : version, lastUpdated));
+                    } catch (Exception exInner) {
+                        // пропустить проблемный файл, но логнуть
+                        LogManager.getLogger().warning("mods: read meta failed for " + modPath + ": " + exInner.getMessage());
+                    }
+                }
+            } catch (Exception ex) {
+                Platform.runLater(() -> LauncherUI.showError("Ошибка загрузки списка модов", ex.getMessage()));
+                return;
+            }
+
+            Platform.runLater(() -> {
+                modsList.getChildren().clear();
+                modsList.getChildren().add(header);
+
+                for (ModMeta m : metas) {
                     HBox row = new HBox(12);
                     row.getStyleClass().add("mod-row");
                     row.setAlignment(Pos.CENTER_LEFT);
                     row.setMinHeight(48);
 
-                    Image iconImg = robustLoadIcon(modPath);
-                    ImageView icon = new ImageView(iconImg);
+                    // placeholder icon
+                    ImageView icon = new ImageView();
                     icon.setFitHeight(24);
                     icon.setFitWidth(24);
                     icon.setPreserveRatio(true);
+                    try (InputStream is = getClass().getResourceAsStream("/img/mod_placeholder.png")) {
+                        if (is != null) icon.setImage(new Image(is));
+                    } catch (Exception ignore) {}
 
-                    final String[] fileName = { modPath.getFileName().toString() };
-                    final boolean[] disabled = { fileName[0].endsWith(".disabled") };
-                    if (disabled[0]) row.getStyleClass().add("disabled");
-
-                    Label nameLabel = new Label(fileName[0].replace(".disabled", ""));
+                    Label nameLabel = new Label(m.displayName());
                     nameLabel.setGraphic(icon);
                     nameLabel.setGraphicTextGap(8);
                     nameLabel.setTextOverrun(OverrunStyle.ELLIPSIS);
 
-                    String version = parseModVersion(modPath);
-                    Label versionLabel = new Label(version);
+                    Label versionLabel = new Label(m.version());
                     versionLabel.setTextOverrun(OverrunStyle.ELLIPSIS);
 
-                    String lastUpdated = formatFileTime(Files.getLastModifiedTime(modPath));
-                    Label dateLabel = new Label(lastUpdated);
+                    Label dateLabel = new Label(m.lastUpdated());
 
                     CheckBox toggle = new CheckBox();
                     toggle.getStyleClass().add("mods-checkbox");
-                    toggle.setSelected(!disabled[0]);
+                    toggle.setSelected(!m.disabled());
+
+                    final String[] fileName = { m.fileName() };
+                    final boolean[] disabled = { m.disabled() };
+
                     toggle.selectedProperty().addListener((obs, oldVal, val) -> {
                         try {
                             Path current = modsDir.resolve(fileName[0]);
@@ -131,29 +169,40 @@ public class ModsUI {
                     );
 
                     modsList.getChildren().add(row);
+
+                    // фоновая загрузка иконки: читаем байты в фоне, создаём Image в UI-потоке
+                    MCLauncher.submitBackground(() -> {
+                        byte[] bytes = robustLoadIconBytes(m.path());
+                        if (bytes != null && bytes.length > 0) {
+                            Platform.runLater(() -> {
+                                try {
+                                    icon.setImage(new Image(new ByteArrayInputStream(bytes)));
+                                } catch (Exception ignored) {}
+                            });
+                        }
+                    });
                 }
-            }
-        } catch (Exception e) {
-            LauncherUI.showError("Ошибка загрузки списка модов", e.getMessage());
-        }
 
-        ScrollPane scroll = new ScrollPane(modsList);
-        scroll.setFitToWidth(true);
-        modsRoot.setCenter(scroll);
+                ScrollPane scroll = new ScrollPane(modsList);
+                scroll.setFitToWidth(true);
+                modsRoot.setCenter(scroll);
 
-        modsList.setStyle("-fx-background-color: transparent;");
-        scroll.setStyle("-fx-background: transparent; -fx-background-color: transparent;");
-        if (scroll.getContent() != null) scroll.getContent().setStyle("-fx-background-color: transparent;");
+                modsList.setStyle("-fx-background-color: transparent;");
+                scroll.setStyle("-fx-background: transparent; -fx-background-color: transparent;");
+                if (scroll.getContent() != null) scroll.getContent().setStyle("-fx-background-color: transparent;");
 
-        if (!embedded) {
-            Button back = new Button("Назад");
-            styleMainButton(back);
-            back.setOnAction(e -> stage.setScene(settingsMenuScene));
-            HBox bottom = new HBox(back);
-            bottom.setAlignment(Pos.CENTER_LEFT);
-            bottom.setPadding(new Insets(12, 16, 16, 16));
-            modsRoot.setBottom(bottom);
-        }
+                if (!embedded) {
+                    Button back = new Button("Назад");
+                    styleMainButton(back);
+                    back.setOnAction(e -> stage.setScene(settingsMenuScene));
+                    HBox bottom = new HBox(back);
+                    bottom.setAlignment(Pos.CENTER_LEFT);
+                    bottom.setPadding(new Insets(12, 16, 16, 16));
+                    modsRoot.setBottom(bottom);
+                }
+            });
+        });
+
         return modsRoot;
     }
 
@@ -195,126 +244,127 @@ public class ModsUI {
 
     private static final String FALLBACK_PNG_BASE64 = "iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAF0lEQVR42mP8z/CfAQgwYGBgYGLAAQBVmgJ3jzg9HwAAAABJRU5ErkJggg==";
 
-    private Image robustLoadIcon(Path jarPath) {
+    private byte[] robustLoadIconBytes(Path jarPath) {
         try (FileSystem fs = FileSystems.newFileSystem(jarPath, (ClassLoader) null)) {
             String modId = extractFirstModId(fs);
-
             List<IconCandidate> candidates = new ArrayList<>();
 
-            try {
-                Path toml = fs.getPath("META-INF", "mods.toml");
-                if (Files.exists(toml)) {
-                    String content = Files.readString(toml, StandardCharsets.UTF_8);
-                    Matcher m = Pattern.compile("(?m)^\\s*logoFile\\s*=\\s*\"([^\"]+)\"").matcher(content);
-                    if (m.find()) {
-                        Path p = safeFsPath(fs, m.group(1));
-                        if (p != null && Files.exists(p)) candidates.add(new IconCandidate(p, 200));
-                    }
-                    Matcher anyPng = Pattern.compile("([\\w/\\\\\\-]+\\.(?i:png))").matcher(content);
-                    while (anyPng.find()) {
-                        Path p = safeFsPath(fs, anyPng.group(1));
-                        if (p != null && Files.exists(p)) candidates.add(new IconCandidate(p, 140));
-                    }
-                }
-            } catch (Exception ignored) {}
-
+            addTomlIcons(fs, candidates);
             for (String jfn : new String[]{"fabric.mod.json", "quilt.mod.json", "mods.json", "mod.json"}) {
-                try {
-                    Path json = fs.getPath(jfn);
-                    if (Files.exists(json)) {
-                        String content = Files.readString(json, StandardCharsets.UTF_8);
-                        Matcher m1 = Pattern.compile("\"icon\"\\s*:\\s*\"([^\"]+\\.png)\"", Pattern.CASE_INSENSITIVE).matcher(content);
-                        if (m1.find()) {
-                            Path p = safeFsPath(fs, m1.group(1));
-                            if (p != null && Files.exists(p)) candidates.add(new IconCandidate(p, 190));
-                        }
-                        Matcher mArr = Pattern.compile("\"icon\"\\s*:\\s*\\[(.*?)\\]", Pattern.DOTALL | Pattern.CASE_INSENSITIVE).matcher(content);
-                        if (mArr.find()) {
-                            Matcher png = Pattern.compile("\"([^\"]+\\.png)\"", Pattern.CASE_INSENSITIVE).matcher(mArr.group(1));
-                            if (png.find()) {
-                                Path p = safeFsPath(fs, png.group(1));
-                                if (p != null && Files.exists(p)) candidates.add(new IconCandidate(p, 180));
-                            }
-                        }
-                        Matcher mObj = Pattern.compile("\"icon\"\\s*:\\s*\\{([^}]+)\\}", Pattern.DOTALL | Pattern.CASE_INSENSITIVE).matcher(content);
-                        if (mObj.find()) {
-                            Matcher mf = Pattern.compile("\"file\"\\s*:\\s*\"([^\"]+\\.png)\"", Pattern.CASE_INSENSITIVE).matcher(mObj.group(1));
-                            if (mf.find()) {
-                                Path p = safeFsPath(fs, mf.group(1));
-                                if (p != null && Files.exists(p)) candidates.add(new IconCandidate(p, 185));
-                            }
-                        }
-                    }
-                } catch (Exception ignored) {}
+                addJsonIcons(fs, jfn, candidates);
             }
-
-            try {
-                Path assets = fs.getPath("assets");
-                if (Files.exists(assets) && Files.isDirectory(assets)) {
-                    try (DirectoryStream<Path> ns = Files.newDirectoryStream(assets)) {
-                        for (Path nsDir : ns) {
-                            for (String fname : new String[]{"icon.png", "logo.png", "textures/icon.png", "textures/logo.png", "textures/gui/logo.png", "textures/gui/icon.png"}) {
-                                Path candidate = nsDir.resolve(fname);
-                                if (Files.exists(candidate)) candidates.add(new IconCandidate(candidate, 180 + (nsDir.getFileName().toString().equalsIgnoreCase(modId) ? 20 : 0)));
-                            }
-                        }
-                    }
-                }
-            } catch (Exception ignored) {}
+            addAssetsIcons(fs, modId, candidates);
 
             for (String rootName : new String[]{"pack.png", "icon.png", "logo.png", "mod_icon.png"}) {
-                try {
-                    Path p = fs.getPath(rootName);
-                    if (Files.exists(p)) candidates.add(new IconCandidate(p, 150));
+                Path p = safeFsPath(fs, rootName);
+                if (p != null && Files.exists(p)) candidates.add(new IconCandidate(p, 150));
+            }
+
+            for (Path root : fs.getRootDirectories()) {
+                try (Stream<Path> walk = Files.walk(root, 6)) {
+                    walk.filter(p -> {
+                        Path fn = p.getFileName();
+                        return fn != null && fn.toString().toLowerCase().endsWith(".png");
+                    }).forEach(p -> {
+                        String fn = p.getFileName().toString().toLowerCase(Locale.ROOT);
+                        int score = 10;
+                        if (fn.contains("logo")) score += 60;
+                        if (fn.contains("icon")) score += 50;
+                        if (fn.contains("pack")) score += 40;
+                        if (fn.contains("mod")) score += 20;
+                        if (modId != null && p.toString().toLowerCase().contains(modId.toLowerCase(Locale.ROOT))) score += 40;
+                        score += Math.max(0, 20 - p.getNameCount());
+                        candidates.add(new IconCandidate(p, score));
+                    });
                 } catch (Exception ignored) {}
             }
 
-            try {
-                for (Path root : fs.getRootDirectories()) {
-                    try (Stream<Path> walk = Files.walk(root, 6)) {
-                        walk.filter(p -> {
-                            Path fn = p.getFileName();
-                            return fn != null && fn.toString().toLowerCase().endsWith(".png");
-                        }).forEach(p -> {
-                            String fn = p.getFileName().toString().toLowerCase(Locale.ROOT);
-                            int score = 0;
-                            if (fn.contains("logo")) score += 60;
-                            if (fn.contains("icon")) score += 50;
-                            if (fn.contains("pack")) score += 40;
-                            if (fn.contains("mod")) score += 20;
-                            if (modId != null && p.toString().toLowerCase().contains(modId.toLowerCase(Locale.ROOT))) score += 40;
-                            // depth heuristic (shallower better)
-                            int depth = p.getNameCount();
-                            score += Math.max(0, 20 - depth);
-                            // base fallback
-                            score += 10;
-                            candidates.add(new IconCandidate(p, score));
-                        });
-                    } catch (Exception ignored) {}
-                }
-            } catch (Exception ignored) {}
-
-            Optional<IconCandidate> best = candidates.stream()
-                    .filter(c -> c.path != null)
-                    .filter(c -> {
-                        try { return Files.exists(c.path); } catch (Exception ex) { return false; }
+            return candidates.stream()
+                    .filter(c -> Files.exists(c.path))
+                    .max(Comparator.comparingInt(c -> c.score))
+                    .map(c -> {
+                        try {
+                            return Files.readAllBytes(c.path);
+                        } catch (Exception e) {
+                            return null;
+                        }
                     })
-                    .max(Comparator.comparingInt((IconCandidate c) -> c.score));
+                    .orElseGet(this::fallbackIconBytes);
+        } catch (Exception e) {
+            return fallbackIconBytes();
+        }
+    }
 
-            if (best.isPresent()) {
-                try {
-                    byte[] data = Files.readAllBytes(best.get().path);
-                    return new Image(new ByteArrayInputStream(data));
-                } catch (Exception ignored) {}
+    private void addTomlIcons(FileSystem fs, List<IconCandidate> candidates) {
+        try {
+            Path toml = fs.getPath("META-INF", "mods.toml");
+            if (Files.exists(toml)) {
+                String content = Files.readString(toml, StandardCharsets.UTF_8);
+                Matcher m = Pattern.compile("(?m)^\\s*logoFile\\s*=\\s*\"([^\"]+)\"").matcher(content);
+                if (m.find()) {
+                    Path p = safeFsPath(fs, m.group(1));
+                    if (p != null && Files.exists(p)) candidates.add(new IconCandidate(p, 200));
+                }
+                Matcher anyPng = Pattern.compile("([\\w/\\\\\\-]+\\.(?i:png))").matcher(content);
+                while (anyPng.find()) {
+                    Path p = safeFsPath(fs, anyPng.group(1));
+                    if (p != null && Files.exists(p)) candidates.add(new IconCandidate(p, 140));
+                }
             }
-        } catch (Exception ignored) { }
-
-        try (InputStream res = getClass().getResourceAsStream("/img/mod_placeholder.png")) {
-            if (res != null) return new Image(res);
         } catch (Exception ignored) {}
+    }
 
-        byte[] png = Base64.getDecoder().decode(FALLBACK_PNG_BASE64);
-        return new Image(new ByteArrayInputStream(png));
+    private void addJsonIcons(FileSystem fs, String fileName, List<IconCandidate> candidates) {
+        try {
+            Path json = fs.getPath(fileName);
+            if (!Files.exists(json)) return;
+            String content = Files.readString(json, StandardCharsets.UTF_8);
+
+            Matcher m1 = Pattern.compile("\"icon\"\\s*:\\s*\"([^\"]+\\.png)\"", Pattern.CASE_INSENSITIVE).matcher(content);
+            if (m1.find()) addIfExists(fs, m1.group(1), candidates, 190);
+
+            Matcher mArr = Pattern.compile("\"icon\"\\s*:\\s*\\[(.*?)\\]", Pattern.DOTALL | Pattern.CASE_INSENSITIVE).matcher(content);
+            if (mArr.find()) {
+                Matcher png = Pattern.compile("\"([^\"]+\\.png)\"", Pattern.CASE_INSENSITIVE).matcher(mArr.group(1));
+                if (png.find()) addIfExists(fs, png.group(1), candidates, 180);
+            }
+
+            Matcher mObj = Pattern.compile("\"icon\"\\s*:\\s*\\{([^}]+)\\}", Pattern.DOTALL | Pattern.CASE_INSENSITIVE).matcher(content);
+            if (mObj.find()) {
+                Matcher mf = Pattern.compile("\"file\"\\s*:\\s*\"([^\"]+\\.png)\"", Pattern.CASE_INSENSITIVE).matcher(mObj.group(1));
+                if (mf.find()) addIfExists(fs, mf.group(1), candidates, 185);
+            }
+        } catch (Exception ignored) {}
+    }
+
+    private void addAssetsIcons(FileSystem fs, String modId, List<IconCandidate> candidates) {
+        try {
+            Path assets = fs.getPath("assets");
+            if (!Files.exists(assets) || !Files.isDirectory(assets)) return;
+            try (DirectoryStream<Path> ns = Files.newDirectoryStream(assets)) {
+                for (Path nsDir : ns) {
+                    for (String fname : new String[]{"icon.png", "logo.png", "textures/icon.png", "textures/logo.png", "textures/gui/logo.png", "textures/gui/icon.png"}) {
+                        Path candidate = nsDir.resolve(fname);
+                        if (Files.exists(candidate)) {
+                            int score = 180 + (nsDir.getFileName().toString().equalsIgnoreCase(modId) ? 20 : 0);
+                            candidates.add(new IconCandidate(candidate, score));
+                        }
+                    }
+                }
+            }
+        } catch (Exception ignored) {}
+    }
+
+    private byte[] fallbackIconBytes() {
+        try (InputStream res = getClass().getResourceAsStream("/img/mod_placeholder.png")) {
+            if (res != null) return res.readAllBytes();
+        } catch (Exception ignored) {}
+        return Base64.getDecoder().decode(FALLBACK_PNG_BASE64);
+    }
+
+    private void addIfExists(FileSystem fs, String rawPath, List<IconCandidate> candidates, int score) {
+        Path p = safeFsPath(fs, rawPath);
+        if (p != null && Files.exists(p)) candidates.add(new IconCandidate(p, score));
     }
 
     private record IconCandidate(Path path, int score) {}
